log
Thu 04 May 2023 02:56:24 AM UTC: 
 tests:  0|5
total_score: 0/70
96bcda4
Thu 04 May 2023 03:41:45 AM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:11: error: ‘Node’ has no member named ‘next’
   55 |     if ( n->next != NULL){
      |           ^~
sudoku.c:56:7: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   56 |       push_back( list, n);
      |       ^~~~~~~~~
      |       pushBack
cc1: all warnings being treated as errors
Compilation failed
d2ff5e9
Thu 04 May 2023 03:44:26 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:11: error: ‘Node’ has no member named ‘first’
   55 |     if ( n->first != NULL){
      |           ^~
sudoku.c:56:7: error: implicit declaration of function ‘pushback’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   56 |       pushback( list, n);
      |       ^~~~~~~~
      |       pushBack
cc1: all warnings being treated as errors
Compilation failed
1edbdea
Thu 04 May 2023 03:44:33 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:11: error: ‘n’ is a pointer; did you mean to use ‘->’?
   55 |     if ( n.first != NULL){
      |           ^
      |           ->
sudoku.c:56:7: error: implicit declaration of function ‘pushback’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   56 |       pushback( list, n);
      |       ^~~~~~~~
      |       pushBack
cc1: all warnings being treated as errors
Compilation failed
e5a039f
Thu 04 May 2023 03:44:39 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:11: error: ‘Node’ has no member named ‘first’
   55 |     if ( n->first != NULL){
      |           ^~
sudoku.c:56:7: error: implicit declaration of function ‘pushback’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   56 |       pushback( list, n);
      |       ^~~~~~~~
      |       pushBack
cc1: all warnings being treated as errors
Compilation failed
63fc928
Thu 04 May 2023 03:53:02 AM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:14: error: invalid initializer
   55 |     Node b = copy( n);
      |              ^~~~
sudoku.c:56:6: error: subscripted value is neither array nor pointer nor vector
   56 |     b[0][i] = i + 1;
      |      ^
sudoku.c:57:21: error: incompatible type for argument 2 of ‘pushBack’
   57 |     pushBack( list, b);
      |                     ^
      |                     |
      |                     Node
In file included from test.c:4:
list.h:23:33: note: expected ‘void *’ but argument is of type ‘Node’
   23 | void pushBack(List* list, void* data);
      |                           ~~~~~~^~~~
Compilation failed
48b09e3
Thu 04 May 2023 03:53:23 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:9: error: subscripted value is neither array nor pointer nor vector
   56 |     b[0][i] = i + 1;
      |         ^
Compilation failed
d959595
Thu 04 May 2023 03:54:03 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
67d0221
